# hexgame

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  doxygen-config  doxygen-config~
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions_rela.html  functions_vars.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_1.map  inherit_graph_3.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5
docs/html/d0/d11/: figure_8h.html  figure_8h_source.html
docs/html/d0/d9a/: field_8cpp__incl.map
docs/html/d0/da2/: structColor.html
docs/html/d1/d10/: game_8h__incl.map
docs/html/d1/d98/: player_8h__incl.map  player_8h__incl.md5
docs/html/d2/d4b/: classPlayer.html
docs/html/d2/d6f/: constants_8h.html  constants_8h_source.html  constants_8h_source.html~master
docs/html/d2/dd5/: game_8h.html  game_8h_source.html
docs/html/d3/d0e/: classField__coll__graph.map  classField__coll__graph.md5
docs/html/d3/d33/: coin_8h__dep__incl.map  coin_8h__dep__incl.md5
docs/html/d3/d4a/: tile_8h__dep__incl.map  tile_8h__dep__incl.md5
docs/html/d3/d62/: player_8h.html  player_8h.html~master  player_8h_source.html  (+1 more)
docs/html/search/: all_10.js  all_13.js  all_14.js  all_15.js  all_3.js  all_5.js  all_6.js  all_9.js  all_d.js  all_f.js  classes_1.js  classes_2.js  defines_0.js  defines_2.js  defines_4.js  files_2.js  files_3.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  functions_7.js  functions_b.js  functions_e.js  related_0.js  searchdata.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_9.js
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex~HEAD  files.tex
doxygen/html/: annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_func.html  globals.html  globals_func.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.md5  inherit_graph_4.map  inherits.html  menudata.js
doxygen/html/search/: all_1.js  all_11.js  all_17.js  all_18.js  all_2.js  all_4.js  all_7.js  all_8.js  all_a.js  all_e.js  classes_0.js  classes_5.js  classes_6.js  defines_1.js  defines_3.js  files_0.js  files_1.js  files_5.js  functions_11.js  functions_3.js  functions_5.js  functions_6.js  functions_a.js  functions_c.js  functions_d.js  functions_f.js  variables_0.js  variables_2.js  variables_6.js  variables_8.js  variables_c.js
doxygen/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  refman.tex
include/: bush.h  coin.h  color.h  constants.h  field.h  figure.h  game.h  player.h  position.h  tile.h  util.h  vec2.h
src/: button.cpp  button.h  constants.h  field.cpp  field.h  figure.h  game.cpp  game.h  gui.cpp  gui.h  guielement.h  player.cpp  player.h  position.cpp  tile.cpp  tile.h  util.cpp  util.h  vec2.cpp
(+225 files in other folders)
